examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__format_strings_with_format_specifiers@fa b2 c345.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            Interpolation(
                                                Interpolation {
                                                    type_conversion: None,
                                                    expression: Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    format_specifier: Some(
                                                        FormatSpecifier {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            Interpolation(
                                                Interpolation {
                                                    type_conversion: None,
                                                    expression: Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    format_specifier: Some(
                                                        FormatSpecifier {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
