examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__generator_expressions@dicta b for a b in d.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        arguments: GeneratorExpression(
                                            GeneratorExpression {
                                                body: PrimaryExpression(
                                                    Tuple(
                                                        Tuple {
                                                            children: [
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ],
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                                children: [
                                                    ForInClause(
                                                        ForInClause {
                                                            left: PatternList(
                                                                PatternList {
                                                                    children: [
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            right: [
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ],
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
